# Solana-BOT

./: package.json
VS-CODE-extension/error-dector/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
VS-CODE-extension/error-dector/src/: extension.ts
VS-CODE-extension/error-dector/src/test/: extension.test.ts
bolty-worker/: README.md  package.json
solana-bot/: package-lock.json  package.json
solana-bot/apps/Docker/: Dockerfile  docker2.txt  docker_without_sbf.txt
solana-bot/apps/code-server/: Dockerfile
solana-bot/apps/code-server/bolty-worker/: Cargo.toml  index.test.ts
solana-bot/apps/code-server/bolty-worker/src/: lib.rs
solana-bot/apps/code-server/temp/bolty-worker/: Cargo.toml  README.md  deploy.sh  index.test.ts  package-lock.json  package.json
solana-bot/apps/code-server/temp/bolty-worker/src/: cc  lib.rs
solana-bot/apps/code-server/temp/server/: index.js  index.ts  (+2 more)
solana-bot/apps/deploy/: solana-keypair.json
solana-bot/apps/frontend/: config.ts  package.json
solana-bot/apps/frontend/app/: layout.tsx  page.tsx
solana-bot/apps/frontend/components/: AppBar.tsx  AppSidebar.tsx  AppWalletProvider.tsx  Hero.tsx  Prompt.tsx  SignTransction.tsx  SolanaConnectButton.tsx  TemplateButton.tsx  testing.js
solana-bot/apps/frontend/hooks/: useAction.ts  usePrompts.ts
solana-bot/apps/primary-backend/: index.ts  middleware.ts  package.json
solana-bot/apps/worker/: index.ts  os.ts  package.json  praser.ts  systemPrompt.tsx  worker.test.ts
solana-bot/apps/worker-orchestrator/: README.md  index.ts  package.json
(+2 files in other folders)
