[package]
name = "solana_program"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
solana-program = "1.18.26"
borsh = "0.9.1"

[dev-dependencies]
# Align these with your solana-program version
solana-program-test = "1.18.26" 
solana-sdk = "1.18.26"

[lib]
crate-type = ["cdylib", "lib"]